# poker-base

./: .gitignore  ChangeLog.md  Contributing.md  LICENSE  README.md  Resources.md  backup.nix  cabal.project  cabal.project.local  default.nix  haskell-ci.config  hie.yaml  package.yaml  poker-base.cabal  poker.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/: LICENSE  Poker.hs
src/Poker/: Amount.hs  Base.hs  BigBlind.hs  Cards.hs  Evaluate.hs  Game.hs  Internal.hs  ParsePretty.hs  Pretty.hs  Range  Range.hs  Types.hs  Utils.hs
src/Poker/Types/: ActionIx.hs  BigBlind.hs  Cards.hs  Game.hs  IsBetSize.hs  Range.hs
test/: Base.hs  BaseCards.csv  Driver.hs  Instances.hs
test/Poker/Types/: ActionIxTest.hs
test/Test/Poker/: Cards.hs  Game.hs  Range.hs
test/Test/Poker/Types/: ActionIx.hs  Cards.hs  Game.hs  Range.hs
