cabal-version: 1.12

name:           poker
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/poker#readme>
category:       Poker
synopsis:       A library for poker types
homepage:       https://github.com/santiweight/poker#readme
bug-reports:    https://github.com/santiweight/poker/issues
author:         Santiago Weight
maintainer:     santiago.weight@gmail.com
copyright:      2019 Santiago Weight
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/santiweight/Exploit


library
  exposed-modules:
      Poker
      Poker.Range
      Poker.Internal
  other-modules:
      Poker.Amount
      Poker.ParsePretty
      Poker.BigBlind
      Poker.Cards
      Poker.Game
      Poker.Utils
      Paths_poker_base
  hs-source-dirs:
      src
  default-extensions: ConstraintKinds DataKinds DeriveDataTypeable DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase FlexibleContexts GADTs LambdaCase LiberalTypeSynonyms PartialTypeSignatures PatternSynonyms PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TypeApplications TypeOperators TypeFamilies UnicodeSyntax TemplateHaskell
  ghc-options: -Wall
  build-depends:
    base
    , containers
    , megaparsec
    , prettyprinter
    , safe-money
    , text
  default-language: Haskell2010

test-suite all-tests
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
      Test.Poker.Cards
      Test.Poker.Game
      Test.Poker.Range
      Paths_poker_base
  hs-source-dirs:
      test
  default-extensions: ConstraintKinds DataKinds DeriveDataTypeable DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase FlexibleContexts GADTs LambdaCase LiberalTypeSynonyms PartialTypeSignatures PatternSynonyms PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TypeApplications TypeOperators TypeFamilies UnicodeSyntax TemplateHaskell
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      QuickCheck
    , base
    , containers
    , extra
    , hspec
    , megaparsec
    , poker-base
    , prettyprinter
    , safe-money
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-quickcheck
    , text
  default-language: Haskell2010
