cabal-version: 1.22

name:           poker-base
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/santiweight/poker-base#readme>
category:       Poker
synopsis:       A library for core poker types
homepage:       https://github.com/santiweight/poker-base#readme
bug-reports:    https://github.com/santiweight/poker-base/issues
author:         Santiago Weight
maintainer:     santiago.weight@gmail.com
copyright:      2021 Santiago Weight
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:
   GHC == 8.4.4
   ||  == 8.6.5
   ||  == 8.10.7
   ||  == 9.0.1

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/santiweight/poker-base

library
  exposed-modules:
      Poker
      Poker.Range
  other-modules:
      Poker.Amount
      Poker.ParsePretty
      Poker.BigBlind
      Poker.Cards
      Poker.Game
      Poker.Utils
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
    base <5.0,
    text >=0.2 && <1.3,
    containers >=0.5 && <0.7,
    megaparsec,
    prettyprinter,
    safe-money
  default-language: Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    TypeFamilies
    TemplateHaskell
    ViewPatterns

test-suite all-tests
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
      Test.Poker.Cards
      Test.Poker.Game
      Test.Poker.Range
  hs-source-dirs:
      test
  default-extensions: ConstraintKinds DataKinds DeriveDataTypeable DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase FlexibleContexts GADTs LambdaCase LiberalTypeSynonyms PartialTypeSignatures PatternSynonyms PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TypeApplications TypeOperators TypeFamilies UnicodeSyntax TemplateHaskell
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
    base <5.0,
    text >=0.2 && <1.3,
    containers >=0.5 && <0.7,
    QuickCheck,
    -- TODO remove dependency
    extra,
    hspec,
    megaparsec,
    poker-base,
    prettyprinter,
    safe-money,
    tasty,
    tasty-discover,
    tasty-hspec,
    tasty-quickcheck
  default-language: Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    TypeFamilies
    TemplateHaskell
