cabal-version: 1.22
name:           poker-base
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/santiweight/poker-base#readme>
category:       Poker
synopsis:       A library for core poker types
homepage:       https://github.com/santiweight/poker-base#readme
bug-reports:    https://github.com/santiweight/poker-base/issues
author:         Santiago Weight
maintainer:     santiago.weight@gmail.com
copyright:      2021 Santiago Weight
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:
   GHC == 8.10.7
   ||  == 9.0.1

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/santiweight/poker-base

library
  exposed-modules:
    Poker
    Poker.Range
  other-modules:
    Poker.Amount
    Poker.ParsePretty
    Poker.BigBlind
    Poker.Cards
    Poker.Game
    Poker.Utils
  hs-source-dirs:
    src
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
    -hiedir=.hie -Wunused-packages
    -funbox-strict-fields
  build-depends:
    base >= 4.11 && <5,
    text >= 0.11 && <1.3,
    containers >= 0.5 && <0.7,
    megaparsec >= 9.0 && < 9.3,
    prettyprinter >= 1.6 && < 1.8,
    safe-money >= 0.9 && < 0.10
  default-language: Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    TypeFamilies
    TemplateHaskell
    ViewPatterns

test-suite all-tests
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    Test.Poker.Cards
    Test.Poker.Game
    Test.Poker.Range
  hs-source-dirs:
    test
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
    -hiedir=.hie -Wunused-packages
    -funbox-strict-fields
    -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
    base >= 4.11 && <5,
    poker-base,
    text >= 0.11 && <1.3,
    prettyprinter >= 1.6 && < 1.8,
    containers >= 0.5 && <0.7,
    QuickCheck >= 2.14.2 && < 2.15,
    extra >= 1.7.10 && < 1.8,
    hspec >= 2.8.3 && < 2.9,
    tasty >= 1.4.2 && < 1.5,
    tasty-hspec >= 1.2 && < 1.3,
    tasty-quickcheck >= 0.10.1 && < 0.11

  default-language: Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    TypeFamilies
    TemplateHaskell
