cabal-version: 1.22

name:           poker
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/poker#readme>
category:       Poker
synopsis:       A library for poker types
homepage:       https://github.com/santiweight/poker#readme
bug-reports:    https://github.com/santiweight/poker/issues
author:         Santiago Weight
maintainer:     santiago.weight@gmail.com
copyright:      2019 Santiago Weight
license:        MIT
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/santiweight/poker

library
  exposed-modules:
      Poker
      Poker.Range
      -- TODO Rewrite tests so this doesn't have to be exposed
      Poker.Internal
  other-modules:
      Poker.Amount
      Poker.ParsePretty
      Poker.BigBlind
      Poker.Cards
      Poker.Game
      Poker.Utils
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
    base >=4.13 && <5.0,
    text >=0.2 && <1.3,
    containers >=0.5 && <0.7,
    megaparsec,
    prettyprinter,
    safe-money
  default-language: Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    TypeFamilies
    TemplateHaskell

test-suite all-tests
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
      Test.Poker.Cards
      Test.Poker.Game
      Test.Poker.Range
  hs-source-dirs:
      test
  default-extensions: ConstraintKinds DataKinds DeriveDataTypeable DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase FlexibleContexts GADTs LambdaCase LiberalTypeSynonyms PartialTypeSignatures PatternSynonyms PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TypeApplications TypeOperators TypeFamilies UnicodeSyntax TemplateHaskell
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
    base >=4.13 && <5.0,
    text >=0.2 && <1.3,
    containers >=0.5 && <0.7,
      QuickCheck
    , extra
    , hspec
    , megaparsec
    , poker
    , prettyprinter
    , safe-money
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-quickcheck
  default-language: Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    TypeFamilies
    TemplateHaskell
